--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@nrwl/cli": "14.3.6",
     "@nrwl/cypress": "14.3.6",
     "@nrwl/eslint-plugin-nx": "14.3.6",
+    "@nrwl/express": "14.4.0",
     "@nrwl/jest": "14.3.6",
     "@nrwl/linter": "14.3.6",
+    "@nrwl/node": "14.4.0",
     "@nrwl/react": "14.3.6",
     "@nrwl/web": "14.3.6",
     "@nrwl/workspace": "14.3.6",
     "@testing-library/react": "13.3.0",
+    "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
     "@types/react": "18.0.13",
@@ -45,6 +48,7 @@
   "dependencies": {
     "@material-ui/core": "4.12.4",
     "core-js": "^3.6.5",
+    "express": "4.17.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.3.0",
