--- a/libs/store/ui-shared/project.json
+++ b/libs/store/ui-shared/project.json
@@ -2,7 +2,7 @@
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/store/ui-shared/src",
   "projectType": "library",
-  "tags": [],
+  "tags": ["scope:store", "type:ui"],
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
