--- a/package.json
+++ b/package.json
@@ -50,13 +50,15 @@
     "eslint-plugin-react": "7.30.0",
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "27.5.1",
+    "msw": "0.42.3",
     "nx": "14.3.6",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "ts-jest": "27.1.4",
     "ts-node": "~10.8.0",
     "typescript": "~4.7.2",
-    "url-loader": "^3.0.0"
+    "url-loader": "^3.0.0",
+    "whatwg-fetch": "3.6.2"
   },
   "dependencies": {
     "@material-ui/core": "4.12.4",
