--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nrwl/jest": "14.3.6",
     "@nrwl/linter": "14.3.6",
     "@nrwl/node": "14.4.0",
+    "@nrwl/nx-cloud": "14.2.0",
     "@nrwl/react": "14.3.6",
     "@nrwl/storybook": "14.4.0",
     "@nrwl/web": "14.3.6",
