--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,9 @@ jobs:
     name: Testing affected apps # the name that will appear on the Actions UI
     steps: # what steps it will perform
       - uses: actions/checkout@v3 # checkout whatever branch the PR is using
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
       - uses: bahmutov/npm-install@v1 # trigger an `npm install`
       - run: npm run nx affected -- --target=test --base=origin/master --parallel
   build:
@@ -15,19 +18,28 @@ jobs:
     name: Building affected apps
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
       - uses: bahmutov/npm-install@v1
       - run: npm run nx affected -- --target=build --base=origin/master --parallel
   lint:
     runs-on: ubuntu-latest
-    name: Building affected apps
+    name: Linting affected apps
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
       - uses: bahmutov/npm-install@v1
       - run: npm run nx affected -- --target=lint --base=origin/master --parallel
   e2e:
     runs-on: ubuntu-latest
-    name: Building affected apps
+    name: E2E Testing affected apps
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
       - uses: bahmutov/npm-install@v1
       - run: npm run nx affected -- --target=e2e --base=origin/master --parallel
