--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
     "whatwg-fetch": "3.6.2"
   },
   "dependencies": {
-    "@material-ui/core": "4.12.4",
+    "@emotion/react": "11.9.3",
+    "@emotion/styled": "11.9.3",
+    "@mui/material": "5.8.6",
     "core-js": "^3.6.5",
     "express": "4.17.2",
     "react": "18.2.0",
