--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - run: node -v
-      - run: npm ci
+      - run: npm i
 
       - run: npm run nx affected -- --target=test --base=origin/master --parallel
 
@@ -53,7 +53,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - run: node -v
-      - run: npm ci
+      - run: npm i
 
       - run: npm run nx affected -- --target=build --base=origin/master --parallel
 
@@ -80,7 +80,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - run: node -v
-      - run: npm ci
+      - run: npm i
 
       - run: npm run nx affected -- --target=lint --base=origin/master --parallel
 
@@ -107,6 +107,6 @@ jobs:
             ${{ runner.os }}-node-
 
       - run: node -v
-      - run: npm ci
+      - run: npm i
 
       - run: npm run nx affected -- --target=e2e --base=origin/master --parallel
