--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       - run: node -v
       - run: npm i
 
-      - run: npm run nx affected -- --target=test --base=main --parallel
+      - run: npm run nx affected -- --target=test --base=remotes/origin/main --parallel
 
   build:
     runs-on: ubuntu-latest
@@ -55,7 +55,7 @@ jobs:
       - run: node -v
       - run: npm i
 
-      - run: npm run nx affected -- --target=build --base=main --parallel
+      - run: npm run nx affected -- --target=build --base=remotes/origin/main --parallel
 
   lint:
     runs-on: ubuntu-latest
@@ -82,7 +82,7 @@ jobs:
       - run: node -v
       - run: npm i
 
-      - run: npm run nx affected -- --target=lint --base=main --parallel
+      - run: npm run nx affected -- --target=lint --base=remotes/origin/main --parallel
 
   e2e:
     runs-on: ubuntu-latest
@@ -109,4 +109,4 @@ jobs:
       - run: node -v
       - run: npm i
 
-      - run: npm run nx affected -- --target=e2e --base=main --parallel
+      - run: npm run nx affected -- --target=e2e --base=remotes/origin/main --parallel
