--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,9 @@ jobs:
     name: Testing affected apps # the name that will appear on the Actions UI
     steps: # what steps it will perform
       - uses: actions/checkout@v3 # checkout whatever branch the PR is using
+        with:
+          fetch-depth: 0
+
       - uses: actions/setup-node@v3
         with:
           node-version: 16
@@ -28,13 +31,16 @@ jobs:
       - run: node -v
       - run: npm i
 
-      - run: npm run nx affected -- --target=test --base=remotes/origin/main --parallel
+      - run: npm run nx affected -- --target=test --base=origin/main --parallel
 
   build:
     runs-on: ubuntu-latest
     name: Building affected apps
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
       - uses: actions/setup-node@v3
         with:
           node-version: 16
@@ -55,13 +61,16 @@ jobs:
       - run: node -v
       - run: npm i
 
-      - run: npm run nx affected -- --target=build --base=remotes/origin/main --parallel
+      - run: npm run nx affected -- --target=build --base=origin/main --parallel
 
   lint:
     runs-on: ubuntu-latest
     name: Linting affected apps
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
       - uses: actions/setup-node@v3
         with:
           node-version: 16
@@ -82,13 +91,16 @@ jobs:
       - run: node -v
       - run: npm i
 
-      - run: npm run nx affected -- --target=lint --base=remotes/origin/main --parallel
+      - run: npm run nx affected -- --target=lint --base=origin/main --parallel
 
   e2e:
     runs-on: ubuntu-latest
     name: E2E Testing affected apps
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
       - uses: actions/setup-node@v3
         with:
           node-version: 16
@@ -109,4 +121,4 @@ jobs:
       - run: node -v
       - run: npm i
 
-      - run: npm run nx affected -- --target=e2e --base=remotes/origin/main --parallel
+      - run: npm run nx affected -- --target=e2e --base=origin/main --parallel
