--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "ts-node": "~10.8.0",
     "typescript": "~4.7.2",
     "url-loader": "^3.0.0",
+    "webpack": "5.73.0",
     "whatwg-fetch": "3.6.2"
   },
   "dependencies": {
