--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,26 +8,117 @@ jobs:
     name: Testing affected apps # the name that will appear on the Actions UI
     steps: # what steps it will perform
       - uses: actions/checkout@v3 # checkout whatever branch the PR is using
-      - uses: bahmutov/npm-install@v1 # trigger an `npm install`
-      - run: npm run nx affected -- --target=test --base=origin/master --parallel
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      - name: Get npm cache directory
+        id: npm-cache-dir
+        run: |
+          echo "::set-output name=dir::$(npm config get cache)"
+
+      - uses: actions/cache@v3
+        id: npm-cache # use this to check for `cache-hit` ==> if: steps.npm-cache.outputs.cache-hit != 'true'
+        with:
+          path: ${{ steps.npm-cache-dir.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - run: node -v
+      - run: npm i
+
+      - run: npm run nx affected -- --target=test --base=origin/main --parallel
+
   build:
     runs-on: ubuntu-latest
     name: Building affected apps
     steps:
       - uses: actions/checkout@v3
-      - uses: bahmutov/npm-install@v1
-      - run: npm run nx affected -- --target=build --base=origin/master --parallel
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      - name: Get npm cache directory
+        id: npm-cache-dir
+        run: |
+          echo "::set-output name=dir::$(npm config get cache)"
+
+      - uses: actions/cache@v3
+        id: npm-cache
+        with:
+          path: ${{ steps.npm-cache-dir.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - run: node -v
+      - run: npm i
+
+      - run: npm run nx affected -- --target=build --base=origin/main --parallel
+
   lint:
     runs-on: ubuntu-latest
-    name: Building affected apps
+    name: Linting affected apps
     steps:
       - uses: actions/checkout@v3
-      - uses: bahmutov/npm-install@v1
-      - run: npm run nx affected -- --target=lint --base=origin/master --parallel
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      - name: Get npm cache directory
+        id: npm-cache-dir
+        run: |
+          echo "::set-output name=dir::$(npm config get cache)"
+
+      - uses: actions/cache@v3
+        id: npm-cache
+        with:
+          path: ${{ steps.npm-cache-dir.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - run: node -v
+      - run: npm i
+
+      - run: npm run nx affected -- --target=lint --base=origin/main --parallel
+
   e2e:
     runs-on: ubuntu-latest
-    name: Building affected apps
+    name: E2E Testing affected apps
     steps:
       - uses: actions/checkout@v3
-      - uses: bahmutov/npm-install@v1
-      - run: npm run nx affected -- --target=e2e --base=origin/master --parallel
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      - name: Get npm cache directory
+        id: npm-cache-dir
+        run: |
+          echo "::set-output name=dir::$(npm config get cache)"
+
+      - uses: actions/cache@v3
+        id: npm-cache
+        with:
+          path: ${{ steps.npm-cache-dir.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - run: node -v
+      - run: npm i
+
+      - run: npm run nx affected -- --target=e2e --base=origin/main --parallel
