complete lab18 - run-commands and deploying the frontend

--- a/apps/store/project.json
+++ b/apps/store/project.json
@@ -75,6 +75,13 @@
         "jestConfig": "apps/store/jest.config.ts",
         "passWithNoTests": true
       }
+    },
+    "deploy": {
+      "executor": "nx:run-commands",
+      "outputs": [],
+      "options": {
+        "command": "surge dist/apps/store ${SURGE_DOMAIN_STORE} --token ${SURGE_TOKEN}"
+      }
     }
   },
   "tags": ["scope:store", "type:app"]
