--- a/package.json
+++ b/package.json
@@ -12,65 +12,65 @@
   "devDependencies": {
     "@babel/core": "7.12.13",
     "@babel/preset-typescript": "7.12.13",
-    "@nrwl/cli": "14.3.6",
-    "@nrwl/cypress": "14.3.6",
-    "@nrwl/devkit": "14.3.6",
-    "@nrwl/eslint-plugin-nx": "14.3.6",
-    "@nrwl/express": "14.4.0",
-    "@nrwl/jest": "14.3.6",
-    "@nrwl/linter": "14.3.6",
-    "@nrwl/node": "14.4.0",
-    "@nrwl/nx-cloud": "14.2.0",
-    "@nrwl/react": "14.3.6",
-    "@nrwl/storybook": "14.4.0",
-    "@nrwl/web": "14.3.6",
-    "@nrwl/workspace": "14.3.6",
+    "@nrwl/cli": "14.8.2",
+    "@nrwl/cypress": "14.8.2",
+    "@nrwl/devkit": "14.8.2",
+    "@nrwl/eslint-plugin-nx": "14.8.2",
+    "@nrwl/express": "14.8.2",
+    "@nrwl/jest": "14.8.2",
+    "@nrwl/linter": "14.8.2",
+    "@nrwl/node": "14.8.2",
+    "@nrwl/nx-cloud": "14.7.0",
+    "@nrwl/react": "14.8.2",
+    "@nrwl/storybook": "14.8.2",
+    "@nrwl/web": "14.8.2",
+    "@nrwl/workspace": "14.8.2",
     "@storybook/addon-essentials": "~6.5.9",
     "@storybook/builder-webpack5": "~6.5.9",
     "@storybook/core-server": "~6.5.9",
     "@storybook/manager-webpack5": "~6.5.9",
     "@storybook/react": "~6.5.9",
     "@svgr/webpack": "^5.4.0",
-    "@testing-library/react": "13.3.0",
+    "@testing-library/react": "13.4.0",
     "@types/express": "4.17.13",
-    "@types/jest": "27.4.1",
-    "@types/node": "16.11.7",
-    "@types/react": "18.0.13",
-    "@types/react-dom": "18.0.5",
+    "@types/jest": "28.1.8",
+    "@types/node": "18.7.18",
+    "@types/react": "18.0.20",
+    "@types/react-dom": "18.0.6",
     "@types/react-router-dom": "5.3.3",
-    "@typescript-eslint/eslint-plugin": "~5.24.0",
-    "@typescript-eslint/parser": "~5.24.0",
-    "babel-jest": "27.5.1",
+    "@typescript-eslint/eslint-plugin": "5.38.1",
+    "@typescript-eslint/parser": "5.38.1",
+    "babel-jest": "28.1.3",
     "babel-loader": "8.1.0",
     "cypress": "^9.1.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-react": "7.30.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-react": "7.31.8",
     "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "27.5.1",
+    "jest": "28.1.3",
     "msw": "0.42.3",
-    "nx": "14.3.6",
+    "nx": "14.8.2",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
-    "ts-jest": "27.1.4",
-    "ts-node": "~10.8.0",
-    "typescript": "~4.7.2",
+    "ts-jest": "28.0.8",
+    "ts-node": "10.9.1",
+    "typescript": "4.8.4",
     "url-loader": "^3.0.0",
     "webpack": "5.73.0",
     "whatwg-fetch": "3.6.2"
   },
   "dependencies": {
-    "@emotion/react": "11.9.3",
-    "@emotion/styled": "11.9.3",
+    "@emotion/react": "11.10.4",
+    "@emotion/styled": "11.10.4",
     "@mui/material": "5.8.6",
     "core-js": "^3.6.5",
-    "express": "4.17.2",
+    "express": "4.18.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.3.0",
+    "react-router-dom": "6.4.1",
     "regenerator-runtime": "0.13.7",
     "surge": "0.23.1",
     "tslib": "^2.3.0"
